adds section comments

--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
   <div class="container-fluid">
     <div class="row">
 
-      <!-- ADD TASKS SECTION -->
+      <!-- ADD TASKS SECTION BEGINS -->
 
-      <!-- Form Code Begins -->
       <div class="col-sm">
 
         <h1>Add Tasks</h1>
@@ -52,15 +51,14 @@
           <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
         </div>
 
-        <!-- datepicker -->
-
+        <!-- TODO: insert datepicker -->
 
         <input class="btn btn-primary" type="submit" value="Submit">
-      </div> <!-- Form Code Ends -->
+      </div> <!-- ADD TASKS SECTION ENDS -->
 
-      <!-- TO DO TASKS SECTION -->
-
-      <div class="col-sm">
+      <!-- TO DO TASKS SECTION BEGINS -->
+      
+      <div class="col-sm"> 
         <h1>To Do Tasks</h1>
         <br>
         <div class="card" style="width: 18rem;">
@@ -73,13 +71,22 @@
             <a href="#" class="card-link">Another link</a>
           </div>
         </div>
-      </div>
+      </div><!-- TO DO TASKS SECTION ENDS -->
 
-      <!-- COMPLETED TASKS SECTION -->
+      <!-- COMPLETED TASKS SECTION BEGINS -->
 
       <div class="col-sm">
         <h1>Completed Tasks</h1>
-      </div>
+
+        <ul class="list-group">
+          <li class="list-group-item">Cras justo odio</li>
+          <li class="list-group-item">Dapibus ac facilisis in</li>
+          <li class="list-group-item">Morbi leo risus</li>
+          <li class="list-group-item">Porta ac consectetur ac</li>
+          <li class="list-group-item">Vestibulum at eros</li>
+        </ul>
+
+      </div> <!-- COMPLETED TASKS SECTION ENDS -->
 
 
     </div>
