--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta charset="utf-9">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="./resources/style.css">
+  <script src="./index.js" defer></script>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -18,7 +19,7 @@
   <div class="container-fluid">
     <div class="row">
 
-      <!-- ADD TASKS SECTION -->
+      <!-- ADD TASKS FORM SECTION -->
 
       <div class="col-sm">
 
@@ -27,32 +28,32 @@
         <div class="form-group row">
           <label for="task-name" class="col-3 col-form-label">Task Name</label>
           <div class="col-9">
-            <input class="form-control" type="text" value="Task Name" id="example-text-input">
+            <input class="form-control" type="text" value="Task Name" id="newTaskNameInput">
           </div>
         </div>
 
         <div class="form-group row">
           <label for="description" class="col-3 col-form-label">Description</label>
           <div class="col-9">
-            <textarea class="form-control" id="description" rows="3"></textarea>
+            <textarea class="form-control" id="newDescriptionInput" rows="3"></textarea>
           </div>
         </div>
 
         <div class="form-group row">
           <label for="assigned-to" class="col-3 col-form-label">Assigned To</label>
           <div class="col-9">
-            <input class="form-control" type="text" value="Assigned To">
+            <input class="form-control" type="text" value="Assigned To" id="newAssignedToInput">
           </div>
         </div>
 
         <div class="form-group row">
           <label for="example-date-input" class="col-3 col-form-label">Due Date</label>
           <div class="col-9">
-            <input class="form-control" type="date" value="3011-09-19" id="example-date-input">
+            <input class="form-control" type="date" value="3011-09-19" id="newDueDateInput">
           </div>
         </div>
 
-        <input class="btn btn-primary" type="submit" value="Submit">
+        <input class="btn btn-primary" type="submit" value="Submit" id="submitButton" onClick="validFormFieldInput()">
 
       </div>
 
