--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 
         <h1>Add Tasks</h1>
 
+         <div class="alert alert-primary collapse" role="alert" id="warning">
+          Invalid input, try again!
+        </div> 
+
         <div class="form-group row">
           <label for="task-name" class="col-3 col-form-label">Task Name</label>
           <div class="col-9">
