--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta charset="utf-9">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="./resources/style.css">
-  <script src="./index.js" defer></script>
+  <script src="./js/taskManager.js" defer></script>
+  <script src="./js/index.js" defer></script>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
