--- a/index.html
+++ b/index.html
@@ -26,39 +26,41 @@
 
         <h1>Add Tasks</h1>
 
-         <div class="alert alert-primary collapse" role="alert" id="warning">
+        <div class="alert alert-primary collapse" role="alert" id="warning">
           Invalid input, try again!
-        </div> 
-
-        <div class="form-group row">
-          <label for="task-name" class="col-3 col-form-label">Task Name</label>
-          <div class="col-9">
-            <input class="form-control" type="text" value="Task Name" id="newTaskNameInput">
-          </div>
         </div>
 
-        <div class="form-group row">
-          <label for="description" class="col-3 col-form-label">Description</label>
-          <div class="col-9">
-            <textarea class="form-control" id="newDescriptionInput" rows="3"></textarea>
+        <form id='form'>
+          <div class="form-group row">
+            <label for="task-name" class="col-3 col-form-label">Task Name</label>
+            <div class="col-9">
+              <input class="form-control" type="text" id="newTaskNameInput">
+            </div>
           </div>
-        </div>
 
-        <div class="form-group row">
-          <label for="assigned-to" class="col-3 col-form-label">Assigned To</label>
-          <div class="col-9">
-            <input class="form-control" type="text" value="Assigned To" id="newAssignedToInput">
+          <div class="form-group row">
+            <label for="description" class="col-3 col-form-label">Description</label>
+            <div class="col-9">
+              <textarea class="form-control" id="newDescriptionInput" rows="3"></textarea>
+            </div>
           </div>
-        </div>
 
-        <div class="form-group row">
-          <label for="example-date-input" class="col-3 col-form-label">Due Date</label>
-          <div class="col-9">
-            <input class="form-control" type="date" value="3011-09-19" id="newDueDateInput">
+          <div class="form-group row">
+            <label for="assigned-to" class="col-3 col-form-label">Assigned To</label>
+            <div class="col-9">
+              <input class="form-control" type="text" id="newAssignedToInput">
+            </div>
           </div>
-        </div>
 
-        <input class="btn btn-primary" type="submit" value="Submit" id="submitButton" onClick="validFormFieldInput()">
+          <div class="form-group row">
+            <label for="example-date-input" class="col-3 col-form-label">Due Date</label>
+            <div class="col-9">
+              <input class="form-control" type="date" value="2021-02-19" id="newDueDateInput">
+            </div>
+          </div>
+
+          <input class="btn btn-primary" type="submit" value="Submit" id="submitButton" onClick="validFormFieldInput()">
+        </form>
 
       </div>
 
