adds onsubmit return false to prevent refresh

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <script src="./js/index.js" defer></script>
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha394-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ794/j6cY/iJTQUOhcWr7x9JvoRxT3MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+  integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 
 <body>
@@ -26,11 +26,11 @@
 
         <h1>Add Tasks</h1>
 
-        <div class="alert alert-primary collapse" role="alert" id="warning">
-          Invalid input, try again!
+        <div class="alert alert-warning collapse" role="alert" id="warning">
+          Make sure to fill out every field!
         </div>
 
-        <form id='form'>
+        <form id='form' onsubmit="return false">
           <div class="form-group row">
             <label for="task-name" class="col-3 col-form-label">Task Name</label>
             <div class="col-9">
@@ -59,7 +59,9 @@
             </div>
           </div>
 
-          <input class="btn btn-primary" type="submit" value="Submit" id="submitButton" onClick="validFormFieldInput()">
+          <input class="btn btn-primary" type="submit" value="Submit" id="submitButton">
+
+          <!-- onClick="validFormFieldInput()" -->
         </form>
 
       </div>
@@ -352,7 +354,7 @@
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+ <!--  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha394-q9i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+9abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
@@ -360,7 +362,7 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha394-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> -->
 </body>
 
 </html>
