--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+  <title>To Do App</title>
   <!-- Required meta tags -->
   <meta charset="utf-9">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -78,7 +78,7 @@
             <div class="card-body">
               <h4 class="card-title">Task Name</h4>
               <!--Dropdown buttons-->
-              <div class="dropdown float-right">
+              <!-- <div class="dropdown float-right">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Dropdown button
@@ -89,118 +89,15 @@
                   <a class="dropdown-item" href="#">Review</a>
                   <a class="dropdown-item" href="#">Complete</a>
                 </div>
-              </div>
-              <h6 class="card-assignment">Assigned to</h6>
-              <h6 class="card-assignment">Description</h6>
-              <h6 class="card-assignment text-right">Due</h6>
-              <p class="card-text">Description text..........................................</p>
+              </div> -->
+              <h6 class="card-assignment">Assigned To: </h6>
+              <h6 class="card-assignment">Description: </h6>
+              <h6 class="card-assignment text-right">Due: </h6>
+              <p class="card-text">Description: </p>
               <a href="#" class="btn btn-primary">Complete</a>
             </div>
           </li>
 
-          <!--Card 3-->
-
-          <li class="card list-group-item" style="width: 30rem;">
-            <div class="card-body">
-              <h4 class="card-title">Task Name</h4>
-              <!--Dropdown buttons-->
-              <div class="dropdown float-right">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown button
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="#">To-Do</a>
-                  <a class="dropdown-item" href="#">In progress</a>
-                  <a class="dropdown-item" href="#">Review</a>
-                  <a class="dropdown-item" href="#">Complete</a>
-                </div>
-              </div>
-              <h6 class="card-assignment">Assigned to</h6>
-              <h6 class="card-assignment">Description</h6>
-              <h6 class="card-assignment text-right">Due</h6>
-              <p class="card-text">Description text..........................................</p>
-              <a href="#" class="btn btn-primary">Complete</a>
-            </div>
-          </li>
-
-          <!--Card 3-->
-
-          <li class="card list-group-item" style="width: 30rem;">
-            <div class="card-body">
-              <h4 class="card-title">Task Name</h4>
-              <!--Dropdown buttons-->
-              <div class="dropdown float-right">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown button
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="#">To-Do</a>
-                  <a class="dropdown-item" href="#">In progress</a>
-                  <a class="dropdown-item" href="#">Review</a>
-                  <a class="dropdown-item" href="#">Complete</a>
-                </div>
-              </div>
-              <h6 class="card-assignment">Assigned to</h6>
-              <h6 class="card-assignment">Description</h6>
-              <h6 class="card-assignment text-right">Due</h6>
-              <p class="card-text">Description text..........................................</p>
-              <a href="#" class="btn btn-primary">Complete</a>
-            </div>
-          </li>
-
-          <!--Card 4-->
-
-          <li class="card list-group-item" style="width: 30rem;">
-            <div class="card-body">
-              <h4 class="card-title">Task Name</h4>
-              <!--Dropdown buttons-->
-              <div class="dropdown float-right">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown button
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="#">To-Do</a>
-                  <a class="dropdown-item" href="#">In progress</a>
-                  <a class="dropdown-item" href="#">Review</a>
-                  <a class="dropdown-item" href="#">Complete</a>
-                </div>
-              </div>
-              <h6 class="card-assignment">Assigned to</h6>
-              <h6 class="card-assignment">Description</h6>
-              <h6 class="card-assignment text-right">Due</h6>
-              <p class="card-text">Description text..........................................</p>
-              <a href="#" class="btn btn-primary">Complete</a>
-            </div>
-          </li>
-
-          <!--Card 5-->
-
-          <li class="card list-group-item" style="width: 30rem;">
-            <div class="card-body">
-              <h4 class="card-title">Task Name</h4>
-              <!--Dropdown buttons-->
-              <div class="dropdown float-right">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown button
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="#">To-Do</a>
-                  <a class="dropdown-item" href="#">In progress</a>
-                  <a class="dropdown-item" href="#">Review</a>
-                  <a class="dropdown-item" href="#">Complete</a>
-                </div>
-              </div>
-              <h6 class="card-assignment">Assigned to</h6>
-              <h6 class="card-assignment">Description</h6>
-              <h6 class="card-assignment text-right">Due</h6>
-              <p class="card-text">Description text..........................................</p>
-              <a href="#" class="btn btn-primary">Complete</a>
-            </div>
-          </li>
         </ul>
       </div>
 
@@ -237,109 +134,6 @@
             </div>
           </li>
 
-          <!--Card 3-->
-
-          <li class="card list-group-item" style="width: 30rem;">
-            <div class="card-body">
-              <h4 class="card-title">Task Name</h4>
-              <!--Dropdown buttons-->
-              <div class="dropdown float-right">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown button
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="#">To-Do</a>
-                  <a class="dropdown-item" href="#">In progress</a>
-                  <a class="dropdown-item" href="#">Review</a>
-                  <a class="dropdown-item" href="#">Complete</a>
-                </div>
-              </div>
-              <h6 class="card-assignment">Assigned to</h6>
-              <h6 class="card-assignment">Description</h6>
-              <h6 class="card-assignment text-right">Due</h6>
-              <p class="card-text">Description text..........................................</p>
-              <a href="#" class="btn btn-primary">Delete</a>
-            </div>
-          </li>
-
-          <!--Card 3-->
-
-          <li class="card list-group-item" style="width: 30rem;">
-            <div class="card-body">
-              <h4 class="card-title">Task Name</h4>
-              <!--Dropdown buttons-->
-              <div class="dropdown float-right">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown button
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="#">To-Do</a>
-                  <a class="dropdown-item" href="#">In progress</a>
-                  <a class="dropdown-item" href="#">Review</a>
-                  <a class="dropdown-item" href="#">Complete</a>
-                </div>
-              </div>
-              <h6 class="card-assignment">Assigned to</h6>
-              <h6 class="card-assignment">Description</h6>
-              <h6 class="card-assignment text-right">Due</h6>
-              <p class="card-text">Description text..........................................</p>
-              <a href="#" class="btn btn-primary">Delete</a>
-            </div>
-          </li>
-
-          <!--Card 4-->
-
-          <li class="card list-group-item" style="width: 30rem;">
-            <div class="card-body">
-              <h4 class="card-title">Task Name</h4>
-              <!--Dropdown buttons-->
-              <div class="dropdown float-right">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown button
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="#">To-Do</a>
-                  <a class="dropdown-item" href="#">In progress</a>
-                  <a class="dropdown-item" href="#">Review</a>
-                  <a class="dropdown-item" href="#">Complete</a>
-                </div>
-              </div>
-              <h6 class="card-assignment">Assigned to</h6>
-              <h6 class="card-assignment">Description</h6>
-              <h6 class="card-assignment text-right">Due</h6>
-              <p class="card-text">Description text..........................................</p>
-              <a href="#" class="btn btn-primary">Delete</a>
-            </div>
-          </li>
-
-          <!--Card 5-->
-
-          <li class="card list-group-item" style="width: 30rem;">
-            <div class="card-body">
-              <h4 class="card-title">Task Name</h4>
-              <!--Dropdown buttons-->
-              <div class="dropdown float-right">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown button
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="#">To-Do</a>
-                  <a class="dropdown-item" href="#">In progress</a>
-                  <a class="dropdown-item" href="#">Review</a>
-                  <a class="dropdown-item" href="#">Complete</a>
-                </div>
-              </div>
-              <h6 class="card-assignment">Assigned to</h6>
-              <h6 class="card-assignment">Description</h6>
-              <h6 class="card-assignment text-right">Due</h6>
-              <p class="card-text">Description text..........................................</p>
-              <a href="#" class="btn btn-primary">Delete</a>
-            </div>
-          </li>
         </ul>
 
       </div>
