adds render method

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <h1>Add Tasks</h1>
 
-        <div class="alert alert-warning collapse" role="alert" id="warning">
+        <div class="alert alert-danger collapse" role="alert" id="warning">
           Make sure to fill out every field!
         </div>
 
@@ -70,7 +70,8 @@
 
       <div class="col-sm">
         <h1>To Do Tasks</h1>
-        <ul class="list-group">
+        <ul class="list-group" id="task-list">
+          
 
           <!--Card 1-->
 
