--- a/index.html
+++ b/index.html
@@ -73,31 +73,7 @@
         <ul class="list-group" id="task-list">
           
 
-          <!--Card 1-->
-
-          <li class="list-group-item card" style="width: 30rem;">
-            <div class="card-body">
-              <h4 class="card-title">Task Name</h4>
-              <!--Dropdown buttons-->
-              <!-- <div class="dropdown float-right">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown button
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="#">To-Do</a>
-                  <a class="dropdown-item" href="#">In progress</a>
-                  <a class="dropdown-item" href="#">Review</a>
-                  <a class="dropdown-item" href="#">Complete</a>
-                </div>
-              </div> -->
-              <h6 class="card-assignment">Assigned To: </h6>
-              <h6 class="card-assignment">Description: </h6>
-              <h6 class="card-assignment text-right">Due: </h6>
-              <p class="card-text">Description: </p>
-              <a href="#" class="btn btn-primary">Complete</a>
-            </div>
-          </li>
+          <!--Card will appear here-->
 
         </ul>
       </div>
