final css adjustments

--- a/index.html
+++ b/index.html
@@ -34,32 +34,32 @@
           <div class="form-group row">
             <label for="task-name" class="col-3 col-form-label">Task Name</label>
             <div class="col-9">
-              <input class="form-control" type="text" id="newTaskNameInput">
+              <input class="form-control shadow-lg" type="text" id="newTaskNameInput">
             </div>
           </div>
 
           <div class="form-group row">
             <label for="description" class="col-3 col-form-label">Description</label>
             <div class="col-9">
-              <textarea class="form-control" id="newDescriptionInput" rows="3"></textarea>
+              <textarea class="form-control shadow-lg" id="newDescriptionInput" rows="3"></textarea>
             </div>
           </div>
 
           <div class="form-group row">
             <label for="assigned-to" class="col-3 col-form-label">Assigned To</label>
             <div class="col-9">
-              <input class="form-control" type="text" id="newAssignedToInput">
+              <input class="form-control shadow-lg" type="text" id="newAssignedToInput">
             </div>
           </div>
 
           <div class="form-group row">
             <label for="example-date-input" class="col-3 col-form-label">Due Date</label>
             <div class="col-9">
-              <input class="form-control" type="date" value="2021-02-19" id="newDueDateInput">
+              <input class="form-control shadow-lg" type="date" value="2021-02-19" id="newDueDateInput">
             </div>
           </div>
 
-          <input class="btn btn-primary" type="submit" value="Submit" id="submitButton">
+          <input class="btn btn-light shadow-lg" type="submit" value="Submit" id="submitButton">
 
           <!-- onClick="validFormFieldInput()" -->
         </form>
