--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
   <div class="container-fluid">
     <div class="row">
+      <div class="col-sm">
+        <h1>What Do You Need To Do Today?</h1>
+      </div>
+    </div>
+    <div class="row">
 
       <!-- ADD TASKS FORM SECTION -->
 
